--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -43,7 +43,7 @@
 .confirmDialog{
   /* visibility: hidden; */
   position: absolute;
-  top:0;
+  top:-50px;
   right:0;
   height:100%;
   width:100%;
@@ -333,7 +333,8 @@
   bottom:0px;
 
   /* margin-top: .25em; */
-  background-image: url('../../assets/verticalMenu2.png');
+  /* background-image: url('../../assets/verticalMenu2.png'); */
+  background-image: url('../../assets/verticalMenu.png');
   background-repeat: no-repeat;
   background-size:100%;
   height:2em;
@@ -380,7 +381,7 @@
 
 .editDeleteContainerAnchor{
   position: absolute;
-  right:-10px;
+  right:-5px;
   bottom:0px;
 }
 
@@ -412,7 +413,7 @@
   content: "";
   position: absolute;
   bottom: 94%;
-  left: 85%;
+  left: 86%;
   margin-left: -5px;
   /* border-color: transparent transparent var(--buttonHoverColor) transparent; */
   width:.45em; height:.45em;
