--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="modalPositioning editReviewDialog visibilityHidden" [ngClass]="showEditPost? 'visibilityVisible' : ''" >
-  <app-edit-post [review] = "toEdit"  (saveEmitter)='saveHandler($event)' (cancelEmitter)='cancelHandler($event)'  ></app-edit-post>
+  <app-edit-post [review] = "toEdit"  (saveEmitter)='saveHandler($event)' (cancelEmitter)='cancelHandler()'  ></app-edit-post>
 </div>
 
 <!-- HIDDEN INPUT -->
@@ -32,7 +32,7 @@
     <!-- TITLE -->
     <div class="title">Ratings</div>
 
-    <!-- LOOP OF REVIEWS--> 
+    <!-- LOOP OF REVIEWS-->
     <div class="review" *ngFor="let review of reviews; let i = index;">
 
       <!-- PLACE PICTURE AND NAME-->
