fixed vertical height

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 <app-nav-bar></app-nav-bar>
 -->
 
+<div class="fullHeight">
+  <app-navigation></app-navigation>
+  <div style="height: 2em;"></div>
+  <router-outlet></router-outlet>
+</div>
 
-<app-navigation></app-navigation>
-<div style="height: 2em;"></div>
-<router-outlet></router-outlet>
