--- a/src/app/add-rating/add-rating.component.css
+++ b/src/app/add-rating/add-rating.component.css
@@ -1,183 +1,182 @@
 .errorMessage{
-    position: relative;
-    top:5em;
-    width:90%;
-    max-width: 56em;
-    margin-right: auto;
-    margin-left: auto;
-    color: red;
-    font-size: 1em;
-    padding-left: 1em;
-    white-space: pre-wrap
+  position: relative;
+  top:5em;
+  width:90%;
+  max-width: 56em;
+  margin-right: auto;
+  margin-left: auto;
+  color: red;
+  font-size: 1em;
+  padding-left: 1em;
+  white-space: pre-wrap
+}
+
+.host {
+  position: relative;
+  height: calc( 100vh - 3em);
+  width:100vw;
 }
 
 .container {
-    position: relative;
-    top: 7em;
-    width:90%;
-    max-width: 56em;
-    margin-right: auto;
-    margin-left: auto;
-    background-color: #273247;
-    border-radius: 10px;
-    
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  width:100%;
+  max-width: 40em;
+
+  border-radius: 10px;
+  background-color: var(--buttonBackgroundColor);
+  padding: 1em;
 }
 
 .mapAndDetails{
-    display: flex;
-    flex-direction: row;
-    background-color: var(--buttonBackgroundColor);
-    padding-top : .75em;
-    padding-right : .75em;
-    padding-left : .75em;
-    border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  background-color: var(--buttonBackgroundColor);
+  border-radius: 10px;
+  margin-bottom: .5em;
 }
 
-.map { 
-    width: 40%; 
-    border-radius: .5em;
-    margin-bottom: .75em;
+.map {
+  width: 40%;
+  border-radius: .5em;
+  margin-bottom: .75em;
 }
 
 /* start details */
 .details {
-    width: 60%;
-    display:flex;
-    flex-direction: column;
-    margin-left: .75em;
+  width: 60%;
+  display:flex;
+  flex-direction: column;
+  margin-left: .75em;
 }
 
 /* start place */
 .place{
-    width:100%;
-    border-bottom: .1em solid var(--textColor);
+  width:100%;
+  border-bottom: .1em solid var(--textColor);
 }
 .redOutline{
-    border:2px solid red;
-    border-radius: 5px;
+  border:2px solid red;
+  border-radius: 5px;
 }
 /* end place */
 
 /* start drops and words */
 .dropsAndWords{
-    margin-top: 1em;
-    display: flex;
-    flex-direction: row;
+  margin-top: 1em;
+  display: flex;
+  flex-direction: row;
 }
 .drops{
-    height:2.33em;
-    width:8.23em;
-    margin-bottom: .75em;
+  height:2.33em;
+  width:8.23em;
+  margin-bottom: .75em;
 }
 .words{
-    margin-left: .75em;
-    height:auto;
-    width:98%;
-    border-radius: 5px;
-    resize: none;
-    background-color: #273247;
-    font-size: 1em;
-    color:var(--textColor);
-    border:none;
-    margin-bottom: .75em;
-    padding:.5em;
+  margin-left: .75em;
+  height:auto;
+  width:98%;
+  border-radius: 5px;
+  resize: none;
+  background-color: #273247;
+  font-size: 1em;
+  color:var(--textColor);
+  border:none;
+  margin-bottom: .75em;
+  padding:.5em;
 }
 .words:focus{
-    outline: 0;
+  outline: 0;
 }
 /* end drops and words */
 /* end details */
 
+button {
+  padding:1em;
 
-.button {
-    width:auto;
-    margin-right: auto;
-    margin-left: auto;
-    position: relative;
-    top:1em;
+  font-size: 1em;
+
+  background-color:  #374661;
+  color: var(--textColor);
+  width:100%;
+
+  -webkit-transition:  .25s; /* Safari */
+  transition:  .25s;
+  border:none;
+  border-radius: var(--buttonBorderRadius);
 }
+
+button:hover {
+  background-color: var(--buttonHoverColor);
+  transform: scale(1.01);
+  box-shadow: -.25em .5em 1.25em 0em #111111;
+  transition: .5s;
+}
+
+button:focus {outline:0;}
 
 .error{
-    color: var(--textColor);
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 5em;
-    text-align: center;
+  color: var(--textColor);
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 5em;
+  text-align: center;
 }
 .hide{
-    display:none;
+  display:none;
 }
 .show{
-    display: block;
+  display: block;
 }
-
-.stars{
-    font-size: 1.5em;
-    margin-top: .25em;
-    display: flex;
-    flex-direction: row;
-    color: var(--textColor);
-    padding-left: 1em;
-}
-
 
 @media screen and (max-width: 800px) {
 
-    .container {
-        top:5em;
-    }
-    
-    .mapAndDetails {
-        width:auto;
-        flex-direction: column-reverse;
-    }
+  .mapAndDetails {
+    width:auto;
+    flex-direction: column-reverse;
+  }
 
-    .map { 
-        width: 100%; 
-        height:10em;
-        margin-top: 0;
-    }
-    
-    .details {
-        width:100%;
-        height:auto;
-        margin-left: 0;
-    }
+  .map {
+    width: 100%;
+    height:10em;
+    margin-top: .25em;
+  }
 
- 
-    .words{
-       margin-left: 1em;
-       border: 3px solid #273247;
-    }
-    
+  .details {
+    width:100%;
+    height:auto;
+    margin-left: 0;
+  }
+
+  .words{
+    margin-left: 1em;
+  }
+
 }
-  
 
-
-
+@media screen and (max-width: 715px) {
+  .container {
+    width:85%;
+    max-width: 85%;
+  }
+}
 
 @media screen and (max-width: 640px) {
-    
-    .container {
-        background-color: var(--buttonBackgroundColor);
-        top:2em;
-    }
-    .button{
-        width:95%;
-    }
-
+  .button{
+    width:95%;
+  }
 }
 
-
 @media screen and (max-width: 415px) and (orientation: portrait) {
+  .errorMessage{
+    margin-left: 6%;
+    font-size: .6em;
+  }
 
-    .container{
-        top:3em;
-    }
-
-    .errorMessage{
-        margin-left: 6%;
-        font-size: .6em;
-    }
-  
+  .button{
+    margin-bottom: .5em;
+  }
 }
